; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_disassembler.c_Disasm.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_disassembler.c_Disasm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32* }

@DIS_DATA32 = common dso_local global i32 0, align 4
@DIS_ADDRESS32 = common dso_local global i32 0, align 4
@CurrentCS = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Disasm(i64* %0, i32 %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 8
  store i64* %0, i64** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @DIS_DATA32, align 4
  %7 = load i32, i32* @DIS_ADDRESS32, align 4
  %8 = or i32 %6, %7
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  store i32 %8, i32* %9, align 8
  %10 = load i64*, i64** %3, align 8
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to i32*
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  store i32* %12, i32** %13, align 8
  %14 = load i32, i32* %4, align 4
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  store i32 %14, i32* %15, align 8
  %16 = load i32, i32* @CurrentCS, align 4
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  store i32 %16, i32* %17, align 4
  %18 = call i64 @Disassembler(%struct.TYPE_3__* %5)
  %19 = load i64*, i64** %3, align 8
  %20 = load i64, i64* %19, align 8
  %21 = add nsw i64 %20, %18
  store i64 %21, i64* %19, align 8
  %22 = load i32, i32* @TRUE, align 4
  ret i32 %22
}

declare dso_local i64 @Disassembler(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
